# av-visualizer

./: av2_colors.py  eulerflow_forward.py  main.py  pyproject.toml  render_accumulated.py  render_boxes.py  render_flows.py
model_components/: eulerflow_raw_mlp.py  nsfp_raw_mlp.py
models/components/optimization/utils/: early_stopping.py
